Use shared boost include directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,3 @@
-set(BOOSTFILESYSTEM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(BOOSTFILESYSTEM_LIBRARIES boostfilesystem)
 
 add_library(${BOOSTFILESYSTEM_LIBRARIES}
@@ -13,11 +12,11 @@ add_library(${BOOSTFILESYSTEM_LIBRARIES}
     src/windows_file_codecvt.hpp)
 
 target_include_directories(${BOOSTFILESYSTEM_LIBRARIES} PRIVATE
-    ${BOOSTFILESYSTEM_INCLUDE_DIRS})
+    ${BOOST_INCLUDE_DIRS})
 
 target_link_libraries(${BOOSTFILESYSTEM_LIBRARIES}
     ${BOOSTSYSTEM_LIBRARIES})
 
 set(BOOSTFILESYSTEM_FOUND TRUE PARENT_SCOPE)
-set(BOOSTFILESYSTEM_INCLUDE_DIRS ${BOOSTFILESYSTEM_INCLUDE_DIRS} PARENT_SCOPE)
+set(BOOSTFILESYSTEM_INCLUDE_DIRS ${BOOST_INCLUDE_DIRS} PARENT_SCOPE)
 set(BOOSTFILESYSTEM_LIBRARIES ${BOOSTFILESYSTEM_LIBRARIES} PARENT_SCOPE)
